fixed problem with buttons z-index

--- a/client/src/Home/Results/Artist/Artist.css
+++ b/client/src/Home/Results/Artist/Artist.css
@@ -11,9 +11,46 @@
 
 .single-row-container {
     display:flex;
-    justify-content:flex-start
+    justify-content:center;
+    align-items: center;
+    height:50vh;
+    width: 95%;
+    border-radius: 100px;
+    margin:0px;
   }
  
+  .rounded-item2 {
+    color:black;
+    flex-basis: 33.333%;
+    background-color: #E5E5E5;
+    border:2px solid black;
+    display:flex;
+    flex-direction:column;
+    justify-content: flex-start;
+    min-width: 0;
+    min-height: 0;
+    width: 100%;
+    height:100%;
+    overflow: auto;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.rounded-item1 {
+    color:black;
+    flex-basis: 33.333%;
+    background-color: #E5E5E5;
+    border:2px solid black;
+    display:flex;
+    flex-direction:column;
+    justify-content: flex-start;
+    min-width: 0;
+    min-height: 0;
+    width: 100%;
+    height:100%;
+    overflow: auto;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
  
  
  
@@ -52,6 +89,11 @@
         .openModal:hover {
             text-decoration: underline;
             cursor: pointer;
+        }
+
+        .openModal {
+            /* font-size:105%; */
+            font-weight:401;
         }
         
                 /* WordCloud Item*/
